AKS scripting/VIYA4/project/deploy/franceavv/site-config/security/cert-manager-provided-ingress-certificate.yaml
## Example PatchTransformer to patch the secret used by nginx ingress objects
##
## In the following code, the locations that require user specified values are indicated by a capitalized and
## hyphenated name set off by curly braces and a space at each end. You should replace this token with the
## actual value.
## Replace the curly braces, interior spaces, and the variable name.
## For instance, "sas-viya-issuer"
## should be replaced with the name of the cert-manager issuer that will issue certificates used to make
## TLS connections to the SAS Viya applications, such as sas-viya-issuer.
## If you use the suggested example, the correct, final syntax would be:
## value: sas-viya-issuer
##
##
---
apiVersion: builtin
kind: PatchTransformer
metadata:
  name: sas-cert-manager-ingress-annotation-transformer
patch: |-
  - op: add
    path: /metadata/annotations/cert-manager.io~1issuer
    value: sas-viya-issuer # name of the cert-manager issuer that will supply the Ingress cert, such as sas-viya-issuer
target:
  kind: Ingress
  name: .*
